--- a/EthosInc/Views/Home/Index.cshtml
+++ b/EthosInc/Views/Home/Index.cshtml
@@ -5,6 +5,10 @@
 <!DOCTYPE html>
 <html>
     <div class="text-center">
-        <h1 class="display-4">Welcome to Ethos Electronics!</h1>
+        <h1 class="display-4">Welcome to Ethos Electronics!</h1>       
     </div>
+    <div>
+        <p>We are a company that sells computer hardware. Important hyperlinks are listed above, and our products are listed below.</p>
+    </div>
+    
 </html>
