--- a/EthosInc/Views/Home/Login.cshtml
+++ b/EthosInc/Views/Home/Login.cshtml
@@ -6,7 +6,13 @@
 <!DOCTYPE html>
 <html>
 <div class="text-center">
-    <h1 class="display-4">Login</h1>
-    <p>To view your ordered items, enter the code provided into this box:</p>
+    <p>To view your ordered items, enter the code provided from your order into this box:</p>
+    <form>
+        <div class="form-group">
+            <label for="exampleInputPassword1">Order ID</label>
+            <input type="password" class="form-control" id="orderID" placeholder="ID">
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
 </div>
 </html>
