--- a/EthosInc/wwwroot/css/site.css
+++ b/EthosInc/wwwroot/css/site.css
@@ -1,11 +1,29 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
+
+/* Navbar */
 a.navbar-brand {
   white-space: normal;
   text-align: center;
   word-break: break-all;
 }
+
+.navbar {
+    background-color: #0d6efd !important;
+}
+
+.navbar-light .navbar-nav .nav-link {
+    color: white !important;
+}
+
+.navbar-light .navbar-brand {
+    color: white !important;
+    font-weight: bold;
+    font-size: 1.5em;
+}
+
+
 
 /* Provide sufficient contrast against white background */
 a {
@@ -39,11 +57,11 @@ html {
   border-top: 1px solid #e5e5e5;
 }
 .border-bottom {
-  border-bottom: 1px solid #e5e5e5;
+  border-bottom: 0px solid #1453ff !important;
 }
 
 .box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+  box-shadow: rgb(0 0 0 / 15%) 0px 0.5rem 0.75rem
 }
 
 button.accept-policy {
