--- a/EthosInc/Views/Home/Login.cshtml
+++ b/EthosInc/Views/Home/Login.cshtml
@@ -9,8 +9,8 @@
     <p>To view your ordered items, enter the code provided from your order into this box:</p>
     <form>
         <div class="form-group">
-            <label for="exampleInputPassword1">Order ID</label>
-            <input type="password" class="form-control" id="orderID" placeholder="ID">
+            <!--<label for="exampleInputPassword1">Order ID</label>-->
+            <input type="password" class="form-control" id="orderID" placeholder="Order ID">
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
