--- a/EthosInc/wwwroot/css/site.css
+++ b/EthosInc/wwwroot/css/site.css
@@ -87,3 +87,24 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+/* Center subheader*/
+.subheader {
+    text-align: center;
+}
+
+/* Login page order id input */
+.form-control {
+    margin: 0 auto;
+    width: 50%;
+}
+
+/* FAQ boxes */
+.question {
+    width: 70%;
+    height: 50%;
+    border: 1px solid black;
+    margin: 5px auto;
+    padding: 10px;
+    padding-top: 20px;
+}
