--- a/EthosInc/Views/Home/Shop.cshtml
+++ b/EthosInc/Views/Home/Shop.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿
+@{
     ViewData["Title"] = "Shop";
 }
 
@@ -13,4 +14,22 @@
             probably using a database like in the 
             Project examples in Canvas or whatever</p>
     </div>
+    @model IEnumerable<Product>
+    @foreach (var p in Model)
+    {
+        <div class="product-container">
+            <div class="product-photo">
+
+            </div>
+            <div class="product-title">
+                <h3>@p.Name</h3>
+            </div>
+            <div class="product-price">
+                <h4>@p.Price.ToString("c")</h4>
+            </div>
+            <div class="product-description">
+                <h5>@p.Description</h5>
+            </div>
+        </div>
+    }
 </html>
