Added stand-ins for the remaining questions and answers of the FAQ page.

--- a/EthosInc/Views/Home/FAQ.cshtml
+++ b/EthosInc/Views/Home/FAQ.cshtml
@@ -73,6 +73,66 @@
                 </div>
             </div>
 
+            @* Question 6 *@
+            <button class="btn btn-primary question" type="button" data-toggle="collapse" data-target="#question6" aria-expanded="false" aria-controls="collapseExample">
+                This is a question...
+            </button>
+            <div class="collapse" id="question6">
+                <div class="card card-body answer">
+                    <p>
+                        ...And this is an answer
+                    </p>
+                </div>
+            </div>
+
+        @* Question 7 *@
+        <button class="btn btn-primary question" type="button" data-toggle="collapse" data-target="#question7" aria-expanded="false" aria-controls="collapseExample">
+            This is a question...
+        </button>
+        <div class="collapse" id="question7">
+            <div class="card card-body answer">
+                <p>
+                    ...And this is an answer
+                </p>
+            </div>
+        </div>
+
+        @* Question 8 *@
+        <button class="btn btn-primary question" type="button" data-toggle="collapse" data-target="#question8" aria-expanded="false" aria-controls="collapseExample">
+            This is a question...
+        </button>
+        <div class="collapse" id="question8">
+            <div class="card card-body answer">
+                <p>
+                    ...And this is an answer
+                </p>
+            </div>
+        </div>
+
+        @* Question 9 *@
+        <button class="btn btn-primary question" type="button" data-toggle="collapse" data-target="#question9" aria-expanded="false" aria-controls="collapseExample">
+            This is a question...
+        </button>
+        <div class="collapse" id="question9">
+            <div class="card card-body answer">
+                <p>
+                    ...And this is an answer
+                </p>
+            </div>
+        </div>
+
+        @* Question 10 *@
+        <button class="btn btn-primary question" type="button" data-toggle="collapse" data-target="#question10" aria-expanded="false" aria-controls="collapseExample">
+            This is a question...
+        </button>
+        <div class="collapse" id="question10">
+            <div class="card card-body answer">
+                <p>
+                    ...And this is an answer
+                </p>
+            </div>
+        </div>
+
             @* Remember to change id="question[NUM]" and data-target-"#question[NUM]"
                after adding another question or it won't work properly!*@
         </div>
