--- a/EthosInc/Views/Home/Shop.cshtml
+++ b/EthosInc/Views/Home/Shop.cshtml
@@ -17,18 +17,18 @@
     @model IEnumerable<Product>
     @foreach (var p in Model)
     {
-        <div class="product-container">
-            <div class="product-photo">
-
-            </div>
-            <div class="product-title">
-                <h3>@p.Name</h3>
-            </div>
-            <div class="product-price">
-                <h4>@p.Price.ToString("c")</h4>
-            </div>
-            <div class="product-description">
-                <h5>@p.Description</h5>
+       @* To-Do: Adjust the CSS to make it look better and have multiple items in one row *@ 
+        <div class="card">
+            <img class="card-img-top" style="max-width: 400px;" src="https://m.media-amazon.com/images/I/818R7E0341L.jpg">
+            <div class="card-body">
+                <div class="card-title">
+                    <h3>@p.Name</h3>
+                </div>
+                <div class="card-text">
+                    <h4>@p.Price.ToString("c")</h4>
+                    <h5>@p.Description</h5>
+                <a href="#!" class="btn btn-primary">Add to Cart</a>
+                </div>
             </div>
         </div>
     }
