--- a/EthosInc/Views/Home/Shop.cshtml
+++ b/EthosInc/Views/Home/Shop.cshtml
@@ -19,7 +19,7 @@
     {
         <div class="product-container">
             <div class="product-photo">
-
+                <img src="ProductImages/@p.PictureFolder/1.png" alt="@p.Name" style="width:300px;height=:300px;">
             </div>
             <div class="product-title">
                 <h3>@p.Name</h3>
