--- a/EthosInc/wwwroot/css/site.css
+++ b/EthosInc/wwwroot/css/site.css
@@ -99,6 +99,9 @@ body {
     width: 50%;
 }
 
+/* Custom CSS
+-------------------------------------------------- */
+
 /* FAQ boxes */
 .question {
     width: 100%;
