Add products to database

--- a/EthosInc/Views/Home/Shop.cshtml
+++ b/EthosInc/Views/Home/Shop.cshtml
@@ -19,7 +19,7 @@
     {
        @* To-Do: Adjust the CSS to make it look better and have multiple items in one row *@ 
         <div class="card">
-            <img class="card-img-top" style="max-width: 400px;" src="https://m.media-amazon.com/images/I/818R7E0341L.jpg">
+        <img class="card-img-top" style="max-width: 400px;" src="ProductImages/@p.ProductID/1.png" alt="@p.Name">
             <div class="card-body">
                 <div class="card-title">
                     <h3>@p.Name</h3>
