Added more questions to the FAQ page as well as re-added the Pictures variable to the Product file, since errors were being thrown without it.

--- a/EthosInc/Views/Home/FAQ.cshtml
+++ b/EthosInc/Views/Home/FAQ.cshtml
@@ -63,19 +63,20 @@
 
             @* Question 5 *@
             <button class="btn btn-primary question" type="button" data-toggle="collapse" data-target="#question5" aria-expanded="false" aria-controls="collapseExample">
-                This is a question...
+                Are there physical store locations I can visit?
             </button>
             <div class="collapse" id="question5">
                 <div class="card card-body answer">
                     <p>
-                        ...And this is an answer
+                        Ethos Inc. is entirely an online service. While we do have warehouses for storing our products, we do not have any locations
+                        where in-person purchases can be made.
                     </p>
                 </div>
             </div>
 
             @* Question 6 *@
             <button class="btn btn-primary question" type="button" data-toggle="collapse" data-target="#question6" aria-expanded="false" aria-controls="collapseExample">
-                This is a question...
+                Do I need an account to make purchases on your website?
             </button>
             <div class="collapse" id="question6">
                 <div class="card card-body answer">
@@ -87,7 +88,7 @@
 
         @* Question 7 *@
         <button class="btn btn-primary question" type="button" data-toggle="collapse" data-target="#question7" aria-expanded="false" aria-controls="collapseExample">
-            This is a question...
+            If a product I want is out of stock, when can I expect it to become available again?
         </button>
         <div class="collapse" id="question7">
             <div class="card card-body answer">
@@ -99,7 +100,7 @@
 
         @* Question 8 *@
         <button class="btn btn-primary question" type="button" data-toggle="collapse" data-target="#question8" aria-expanded="false" aria-controls="collapseExample">
-            This is a question...
+            Do you do repairs?
         </button>
         <div class="collapse" id="question8">
             <div class="card card-body answer">
@@ -111,7 +112,7 @@
 
         @* Question 9 *@
         <button class="btn btn-primary question" type="button" data-toggle="collapse" data-target="#question9" aria-expanded="false" aria-controls="collapseExample">
-            This is a question...
+            Do you have seasonal deals for any of your products?
         </button>
         <div class="collapse" id="question9">
             <div class="card card-body answer">
@@ -123,7 +124,7 @@
 
         @* Question 10 *@
         <button class="btn btn-primary question" type="button" data-toggle="collapse" data-target="#question10" aria-expanded="false" aria-controls="collapseExample">
-            This is a question...
+            Where can I find out more about your company?
         </button>
         <div class="collapse" id="question10">
             <div class="card card-body answer">
