--- a/EthosInc/Views/_ViewImports.cshtml
+++ b/EthosInc/Views/_ViewImports.cshtml
@@ -1,3 +1,6 @@
 ﻿@using EthosInc
 @using EthosInc.Models
+@using EthosInc.Infrastructure
+@using EthosInc.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper EthosInc.Infrastructure.*, EthosInc
