Fix cart (need to add remove from cart buttons)

--- a/EthosInc/Views/Cart/Index.cshtml
+++ b/EthosInc/Views/Cart/Index.cshtml
@@ -41,6 +41,6 @@
     </table>
 
     <div class="text-center">
-        <a class="btn btn-primary" href="@Model.ReturnUrl">Continue shopping</a>
+        <a class="btn btn-primary" asp-area="" asp-controller="Home" asp-action="Shop">Continue Shopping</a>
     </div>
 </html>
