--- a/EthosInc/Views/Home/Shop.cshtml
+++ b/EthosInc/Views/Home/Shop.cshtml
@@ -16,12 +16,13 @@
             </p>
         </div>
     
-
+        
         <div class="card-deck">
             @model IEnumerable<Product>
             @foreach (var p in Model)
             {
-                @* To-Do: Adjust the CSS to make it look better and have multiple items in one row *@
+            var id = "a8718a8e-707e-4b9c-8057-2d28f75bf236";
+            @* To-Do: Adjust the CSS to make it look better and have multiple items in one row *@
                 <div class="card bg-dark text-light w-100 m-1" style="min-width: 30%">
                     <img class="card-img-top" style="min-height: 40%; max-height: 40%;" src="~/ProductImages/@p.ProductID/1.png" alt="@p.Name">
                     <div class="card-body">
@@ -30,11 +31,9 @@
                         </div>
                         <div class="card-text">
                             <h4>@p.Price.ToString("c")</h4>
-                            <form id="@p.ProductID" asp-action="AddToCart"
-                              asp-controller="Cart" method="post" class="float-right m-2 p-1">
-                                <input type="hidden" asp-for="@p.ProductID" />
-                                <input type="hidden" name="returnUrl"
-                                        value="@ViewContext.HttpContext.Request.PathAndQuery()" />
+                            <form id="@p.ProductID" asp-action="AddToCart" asp-controller="Cart" method="post" class="float-right m-2 p-1">
+                            <input type="hidden" name="productId" value=" @p.ProductID" />
+                                <input type="hidden" name="returnUrl" value="@ViewContext.HttpContext.Request.PathAndQuery()" />
                                 <button type="submit" class="btn btn-primary">
                                     Add To Cart
                                 </button>
