--- a/EthosInc/Views/Shared/_Layout.cshtml
+++ b/EthosInc/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
                     </ul>
                     <ul class="navbar-nav flex-grow-0">
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Cart">Cart 🛒</a>
+                            <a class="nav-link" asp-area="" asp-controller="Cart" asp-action="Index">Cart 🛒</a>
                         </li>
                     </ul>
 
