--- a/EthosInc/Views/_ViewImports.cshtml
+++ b/EthosInc/Views/_ViewImports.cshtml
@@ -1,6 +1,5 @@
-﻿@using EthosInc
-@using EthosInc.Models
-@using EthosInc.Infrastructure
+﻿@using EthosInc.Models
 @using EthosInc.Models.ViewModels
+@using EthosInc.Infrastructure
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@addTagHelper EthosInc.Infrastructure.*, EthosInc
+@addTagHelper EthosInc.Infrastructure.*, EthosInc 
