--- a/EthosInc/Views/Cart/Index.cshtml
+++ b/EthosInc/Views/Cart/Index.cshtml
@@ -22,7 +22,15 @@
             {
                 <tr>
                     <td class="text-center">@line.Quantity</td>
-                    <td class="text-left">@line.Product.Name</td>
+                    <td class="text-left">@line.Product.Name
+                    <form id="@line.Product.ProductID" asp-action="RemoveFromCart" asp-controller="Cart" method="post" class="float-right m-2 p-1">
+                        <input type="hidden" name="productId" value="@line.Product.ProductID" />
+                        <input type="hidden" name="returnUrl" value="@ViewContext.HttpContext.Request.PathAndQuery()" />
+                        <button type="submit" class="btn btn-primary">
+                            Remove From Cart
+                        </button>
+                    </form>
+                    </td>
                     <td class="text-right">@line.Product.Price.ToString("c")</td>
                     <td class="text-right">
                         @((line.Quantity * line.Product.Price).ToString("c"))
