Too much to list

--- a/EthosInc/Views/Cart/Index.cshtml
+++ b/EthosInc/Views/Cart/Index.cshtml
@@ -49,6 +49,7 @@
     </table>
 
     <div class="text-center">
-        <a class="btn btn-primary" asp-area="" asp-controller="Home" asp-action="Shop">Continue Shopping</a>
+        <a class="btn btn-primary" href="@Model.ReturnUrl">Continue Shopping</a>
+        <a class="btn btn-primary" asp-action="Checkout" asp-controller="Order">Checkout</a>
     </div>
 </html>
