--- a/EthosInc/Views/Home/Index.cshtml
+++ b/EthosInc/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
             body {
                 background-image: url('home background.png');
                 background-repeat: no-repeat;
-                background-size: 100% 60%;
+                background-size: 100% 57.5%;
             }
         </style>
     </head>
@@ -22,25 +22,55 @@
         <div class="subheader">
             <p style="color:#ffffff">We are a company that sells computer hardware. Important hyperlinks are listed above, and our products are listed below.</p>
         </div>
-        <div class="box" style="right: 37.5%">
-            <p class="page">ABOUT</p>
-            <form action="About"><button class="button"><img src="~/about button.png" class="img" alt="buttonpng"></button></form>
-            <p class="description">Learn about us!</p>
+        <div class="row justify-content-center">
+            <div class="box">
+                <p class="page">ABOUT</p>
+                <form action="About"><button class="button" style="border-radius: 15px"><img src="~/about button.png" class="img" alt="buttonpng"></button></form>
+                <p class="description">Learn about us!</p>
+            </div>
+            <div class="box">
+                <p class="page">POLICIES</p>
+                <form action="Policy"><button class="button" style="border-radius: 15px"><img src="~/policy button.png" class="img" alt="buttonpng"></button></form>
+                <p class="description">See our polices on shipping, taxes, and more!</p>
+            </div>
+            <div class="box">
+                <p class="page">FAQ</p>
+                <form action="FAQ"><button class="button" style="border-radius: 15px"><img src="~/faq button.png" class="img" alt="buttonpng"></button></form>
+                <p class="description">The answers to common questions regarding our company, products, etc.</p>
+            </div>
+            <div class="box">
+                <p class="page">SHOP</p>
+                <form action="Shop"><button class="button" style="border-radius: 15px"><img src="~/shop button.png" class="img" alt="buttonpng"></button></form>
+                <p class="description">Browse through our selection of products!</p>
+            </div>
         </div>
-        <div class="box" style="right: 20%">
-            <p class="page">POLICIES</p>
-            <form action="Policy"><button class="button"><img src="~/policy button.png" class="img" alt="buttonpng"></button></form>
-            <p class="description">See our polices on shipping,<br>taxes, and more!</p>
+        <div class="text-center">
+            <h2 style="margin: 60px 0px 0px 0px;"><b>MOST POPULAR PRODUCTS</b></h2>
         </div>
-        <div class="box" style="left: 37.5%">
-            <p class="page">FAQ</p>
-            <form action="FAQ"><button class="button"><img src="~/faq button.png" class="img" alt="buttonpng"></button></form>
-            <p class="description">The answers to common<br>questions regarding our<br>company, products, etc.</p>
-        </div>
-        <div class="box" style="left: 20%">
-            <p class="page">SHOP</p>
-            <form action="Shop"><button href="Shop" class="button"><img src="~/shop button.png" class="img" alt="buttonpng"></button></form>
-            <p class="description">Browse through our<brgi>selection of products!</p>
-        </div>
+    <div class="card-deck row justify-content-center">
+        @model IEnumerable<Product>
+        @{
+            List<Product> products = new List<Product>();
+            int i = 0;
+            foreach (var p in Model)
+            {
+                products.Add(p);
+            }
+            for (var j = 0; j < 3; j++)
+            {
+                <div class="card bg-dark text-light w-100 m-1" style="max-width: 15%; min-width: 15%;">
+                    <img class="card-img-top" style="min-height: 40%; max-height: 40%;" src="~/ProductImages/@products[j].ProductID/1.png" alt="@products[j].Name">
+                    <div class="card-body">
+                        <div class="card-title product">
+                            <a href="Shop" style="all: unset; cursor: pointer; text-decoration: underline; font-size: small">@products[j].Name</a>
+                        </div>
+                        <div class="card-text">
+                            <h4>@products[j].Price.ToString("c")</h4>
+                        </div>
+                    </div>
+                </div>
+            }
+        }
+    </div>
     </body>
 </html>
