--- a/EthosInc/wwwroot/css/home.css
+++ b/EthosInc/wwwroot/css/home.css
@@ -1,44 +1,21 @@
 ﻿namespace EthosInc.wwwroot.css
 
 .button {
-    border: 20px solid black;
-    border-radius: 8px;
-    border-color: black;
+    border: solid black;
     background-color: white;
-    color: black;
-    display: block;
-    /*padding: 20px;
-    display: inline-block;
-    margin: 4px 2px;*/
-}
-
-.about {
-    top: 32.5%;
-    right: 37.5%;
-    position: absolute;
-}
-
-.shop {
-    top: 32.5%;
-    left: 20%;
-    position: absolute;
-}
-
-.faq {
-    top: 32.5%;
-    left: 37.5%;
-    position: absolute;
-}
-
-.policy {
-    top: 32.5%;
-    right: 20%;
-    position: absolute;
 }
 
 .img {
     width: 150px;
     height: 150px;
+}
+
+.product {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 5;
+    -webkit-box-orient: vertical;
 }
 
 .page {
@@ -54,6 +31,7 @@
 .box {
     display: inline-block;
     text-align: center;
-    position: absolute;
-    top: 28.5%;
+    margin: 15px;
+    width: 200px;
+    max-width: 200px;
 }
