Added a few more answers to FAQ (still need 2 more) and did most of the outlining for the About page (added pictures and segments).

--- a/EthosInc/Views/Home/About.cshtml
+++ b/EthosInc/Views/Home/About.cshtml
@@ -4,8 +4,38 @@
 
 <!DOCTYPE html>
 <html>
-    <div class="text-center">
-        <h1 class="display-4">About Ethos, Inc</h1>
-        <p>We are a computing sales company dedicated to the sale of hardware.</p>
-    </div>
+    <head>
+        <meta charset="utf-8" />
+        <link rel="stylesheet" type="text/css" href="~/css/about.css"/>
+    </head>
+    <body>
+        <div class="text-center">
+            <h1 class="display-4">About Ethos, Inc</h1>
+            <p>We are a computing sales company dedicated to the sale of hardware.</p>
+        </div>
+        <div>
+            <p class="segment"><b>Mission</b></p>
+        </div>
+        <div>
+            <p class="segment"><b>Business</b></p>
+        </div>
+        <div>
+            <p class="segment"><b>Executives</b></p>
+        </div>
+        <div class="row align-items-center" style="margin: 20px">
+            <img src="~/ExecutiveImages/charles.png" class="picture"/>
+            <p style="font-size: 40px"><b>Charles Williams</b></p>
+            <p class="role">: Executive Chair</p>
+        </div>
+        <div class="row align-items-center" style="margin: 20px">
+            <img src="~/ExecutiveImages/logan.png" class="picture"/>
+            <p style="font-size: 40px"><b>Logan Milbrandt</b></p>
+            <p class="role">: Senior Vice President</p>
+        </div>
+        <div class="row align-items-center" style="margin: 20px">
+            <img src="~/ExecutiveImages/matthew.png" class="picture"/>
+            <p style="font-size: 40px"><b>Matthew Fernandez</b></p>
+            <p class="role">: President and Chief Executive Officer</p>
+        </div>
+    </body>
 </html>
