--- a/EthosInc/Views/Home/FAQ.cshtml
+++ b/EthosInc/Views/Home/FAQ.cshtml
@@ -105,7 +105,9 @@
         <div class="collapse" id="question8">
             <div class="card card-body answer">
                 <p>
-                    ...And this is an answer
+                    If a product was purchased from our website and is in need of repairs, contact our customer service. There they will instruct you on how to send
+                    us your item, where one of our technicians will determine if your item can be fixed and how long it will take. If your item is still under our warranty,
+                    repairs for the item are free! See our Repairs Policy under our “Policy” page for more.
                 </p>
             </div>
         </div>
@@ -117,7 +119,8 @@
         <div class="collapse" id="question9">
             <div class="card card-body answer">
                 <p>
-                    ...And this is an answer
+                    During the Summer and Winter seasons, Ethos Inc. holds many special deals which alternate every week of those seasons. We also hold several other deals
+                    based around the holidays, such as our Black Friday deals.
                 </p>
             </div>
         </div>
@@ -129,7 +132,7 @@
         <div class="collapse" id="question10">
             <div class="card card-body answer">
                 <p>
-                    ...And this is an answer
+                    We suggest visiting our About page to learn more about our company.
                 </p>
             </div>
         </div>
