Finished About page: Formatted title and added text to fill out each section.

--- a/EthosInc/Views/Home/About.cshtml
+++ b/EthosInc/Views/Home/About.cshtml
@@ -10,14 +10,22 @@
     </head>
     <body>
         <div class="text-center">
-            <h1 class="display-4">About Ethos, Inc</h1>
-            <p>We are a computing sales company dedicated to the sale of hardware.</p>
+            <h1 class="display-3" style="background-color: turquoise; text-decoration: underline"><b>About Ethos, Inc</b><span class="cursor"></span></h1>
         </div>
         <div>
             <p class="segment"><b>Mission</b></p>
+            <p style="font-size: 20px">&emsp;&emsp; Our mission here at Ethos Inc is twofold. Firstly, we aim to provide the best online experience and service to our customers, 
+                as well as the best and latest computer hardware in the industry for the best prices. Our second mission served as the inspiration behind 
+                the company’s name. Ethos Inc seeks to maintain full transparency with its customers and employees regarding its business practices, to 
+                establish strong credibility with our customers through acting on our first mission, and to ensure that ethical practices are utilized in 
+                the treatment of our employees and the sourcing of our products.</p>
         </div>
         <div>
             <p class="segment"><b>Business</b></p>
+            <p style="font-size: 20px">&emsp;&emsp; Ethos Inc is a computer hardware distribution company active in the mainland United States of America, with over 2,500 employees 
+                and owning over a dozen storage facilities across the country. Its operations are based in the city of Jacksonville, Florida, where it was 
+                founded in December 2022 by three college students: Charles Williams, Logan Milbrandt, and Matthew Fernandez. The main service offered by 
+                Ethos Inc comes in the form of its online store, where customers can purchase computer hardware and have it shipped to them.</p>
         </div>
         <div>
             <p class="segment"><b>Executives</b></p>
